# django-tags-widget

./: MENIFEST.in  pyproject.toml  readme.rst  requirements.txt
src/mayacms/widgets/tags/: __init__.py  fields.py  widgets.py
src/mayacms/widgets/tags/static/forms/js/: tags-widget.js
